# rowdy

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Config.json  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.yml  index.html  rust-toolchain  search-index.js
cli/: Cargo.toml
cli/src/: main.rs
cli/test/fixtures/: config_csv.json  config_ldap.json  config_mysql.json  config_noop.json  config_postgres.json  config_sqlite.json  users.csv
diesel/: Cargo.toml  docker-compose.db.yml  docker-compose.yml
diesel/src/: lib.rs  mysql.rs  postgres.rs  schema.rs  sqlite.rs  test.rs
diesel/test/fixtures/: mysql.sql  postgres.sql  sqlite.sql
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/str/: trait.FromStr.js
implementors/diesel/associations/: trait.HasTable.js
implementors/diesel/expression/: trait.AppearsOnTable.js  trait.Expression.js  trait.NonAggregate.js  trait.SelectableExpression.js
implementors/diesel/expression_methods/eq_all/: trait.EqAll.js
implementors/diesel/query_builder/: trait.AsQuery.js  trait.QueryFragment.js
implementors/diesel/query_builder/query_id/: trait.QueryId.js
implementors/diesel/query_source/: trait.AppearsInFromClause.js  trait.Column.js  trait.QuerySource.js  trait.Table.js
implementors/diesel/query_source/joins/: trait.JoinTo.js
implementors/rocket/request/from_request/: trait.FromRequest.js
implementors/rocket/response/responder/: trait.Responder.js
implementors/rowdy/auth/: trait.Authenticator.js  trait.AuthenticatorConfiguration.js
implementors/rowdy_diesel/: trait.Connection.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
lib/: Cargo.toml
lib/src/: cors.rs  header.rs  lib.rs  test.rs  token.rs
lib/src/serde_custom/: duration.rs
rowdy/: ByteSequence.t.html  JsonMap.t.html  enum.ByteSequence.html  enum.Error.html  enum.JsonValue.html  fn.launch.html  fn.routes.html  index.html  launch.v.html  sidebar-items.js  struct.Configuration.html  struct.JsonMap.html  struct.Url.html
rowdy/auth/: AuthenticationResult.t.html  AuthenticatorConfiguration.t.html  Basic.t.html  BasicAuthenticator.t.html  Bearer.t.html  BearerAuthenticator.t.html  LdapAuthenticator.t.html  NoOpConfiguration.t.html  Scheme.t.html  StringAuthenticator.t.html  enum.Error.html  fn.missing_authorization.html  index.html  missing_authorization.v.html  sidebar-items.js  struct.AuthenticationResult.html  struct.Authorization.html  struct.LdapAuthenticator.html  struct.NoOp.html  struct.NoOpConfiguration.html  trait.Authenticator.html  trait.AuthenticatorConfiguration.html  type.Basic.html  type.BasicAuthenticator.html  type.Bearer.html  type.BearerAuthenticator.html  type.Scheme.html  type.StringAuthenticator.html
rowdy/auth/ldap/: struct.LdapAuthenticator.html
rowdy/auth/noop/: NoOp.t.html  struct.NoOp.html  struct.NoOpConfiguration.html
rowdy/auth/simple/: SimpleAuthenticator.t.html  SimpleAuthenticatorConfiguration.t.html  Users.t.html  fn.hash_passwords.html  fn.write_csv.html  hash_passwords.v.html  index.html  sidebar-items.js  struct.SimpleAuthenticator.html  struct.SimpleAuthenticatorConfiguration.html  type.Users.html
rowdy/auth/util/: fn.generate_salt.html  fn.hash_password_digest.html  fn.hex_dump.html  generate_salt.v.html  hash_password_digest.v.html  hex_dump.v.html  index.html  sidebar-items.js
rowdy/routes/: fn.routes.html  routes.v.html
rowdy/serde_custom/: index.html  sidebar-items.js
rowdy/serde_custom/duration/: fn.deserialize.html  fn.serialize.html  index.html  sidebar-items.js
rowdy/token/: PrivateClaim.t.html  RefreshToken.t.html  RefreshTokenConfiguration.t.html  RefreshTokenJWE.t.html  RefreshTokenPayload.t.html  TokenGetterCorsOptions.t.html  enum.Error.html  enum.Secret.html  index.html  sidebar-items.js  struct.Configuration.html  struct.Keys.html  struct.RefreshToken.html  struct.RefreshTokenConfiguration.html  struct.Token.html  type.PrivateClaim.html  type.RefreshTokenJWE.html  type.RefreshTokenPayload.html  type.TokenGetterCorsOptions.html
rowdy_diesel/: Authenticator.t.html  enum.Error.html  index.html  sidebar-items.js  struct.Authenticator.html  trait.Connection.html
rowdy_diesel/mysql/: index.html  sidebar-items.js  struct.Configuration.html  type.Authenticator.html
rowdy_diesel/postgres/: index.html  sidebar-items.js  struct.Configuration.html  type.Authenticator.html
rowdy_diesel/schema/: Migration.t.html  index.html  sidebar-items.js  trait.Migration.html
rowdy_diesel/schema/table_macro/users/: constant.all_columns.html  index.html  struct.table.html  type.BoxedQuery.html  type.SqlType.html
rowdy_diesel/schema/users/: constant.all_columns.html  index.html  sidebar-items.js  struct.hash.html  struct.salt.html  struct.star.html  struct.table.html  struct.username.html  type.BoxedQuery.html  type.SqlType.html
rowdy_diesel/schema/users/columns/: hash.t.html  index.html  sidebar-items.js  (+4 more)
rowdy_diesel/sqlite/: Authenticator.t.html  index.html  sidebar-items.js  struct.Configuration.html  type.Authenticator.html
src/: auth.rs  cors.rs  header.rs  lib.rs  macros.rs  main.rs  routes.rs  test.rs  token.rs
src/auth/: ldap.rs  mod.rs  mysql.rs  noop.rs  schema.rs  simple.rs  util.rs
src/rowdy/: lib.rs.html  macros.rs.html  routes.rs.html  token.rs.html
src/rowdy/auth/: ldap.rs.html  mod.rs.html  noop.rs.html  simple.rs.html  util.rs.html
src/rowdy/serde_custom/: duration.rs.html  mod.rs.html
src/rowdy_diesel/: lib.rs.html  mysql.rs.html  postgres.rs.html  schema.rs.html  sqlite.rs.html
src/serde_custom/: duration.rs  mod.rs
test/fixtures/: config.json  travis.sql  users.csv
(+14 files in other folders)
