[package]
name = "rowdy"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
build = "build.rs"
description = "`rowdy` is a Rocket based JSON Web token based authentication server."
homepage = "https://github.com/lawliet89/rowdy"
repository = "https://github.com/lawliet89/rowdy"
documentation = "https://docs.rs/rowdy/"
keywords = ["jwt", "rocket", "token", "authentication"]
categories = ["authentication", "web-programming"]

[badges]
travis-ci = { repository = "lawliet89/rowdy" }

[lib]
name = "rowdy"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = ["simple_authenticator"]

# Build with clippy lints
clippy_lints = ["clippy"]
# A simple file based authenticator
simple_authenticator = ["argon2rs", "csv", "ring"]
# LDAP based authenticator
ldap_authenticator = ["ldap3", "strfmt"]

[dependencies]
biscuit = "0.0.4"
chrono = { version = "0.3", features = ["serde"] }
hyper = "0.10"
log = "0.3"
rocket = "= 0.2.6"
rocket_codegen = "= 0.2.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicase="1.4"
uuid = { version = "0.4", features = ["use_std", "serde"] }

# Optional dependencies that are activated by the various features
argon2rs = { version = "0.2.5", optional = true }
clippy = { version = "=0.0.130", optional = true }
csv = { version = "0.15", optional = true }
ldap3 = { version = "0.4.0", optional = true }
ring = { version = "0.9", optional = true } # rust-jwt has this as its dependency
strfmt = { version = "0.1.5", optional = true }

[dependencies.rocket_contrib]
version = "= 0.2.6"
default-features = false
features = ["json", "uuid"]

[dev-dependencies]
serde_test = "1.0"
rocket = { version = "= 0.2.6", features = ["testing"] }

[build-dependencies]
ansi_term = "0.9"
version_check = "0.1"

[workspace]
members = ["cli"]
