[package]
name = "rowdy"
version = "0.0.5-dev"
license = "Apache-2.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
build = "build.rs"
description = "`rowdy` is a Rocket based JSON Web token based authentication server."
homepage = "https://github.com/lawliet89/rowdy"
repository = "https://github.com/lawliet89/rowdy"
documentation = "https://docs.rs/rowdy/"
keywords = ["jwt", "rocket", "token", "authentication"]
categories = ["authentication", "web-programming"]

[badges]
travis-ci = { repository = "lawliet89/rowdy" }

[lib]
name = "rowdy"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = ["simple_authenticator"]

# A simple file based authenticator
simple_authenticator = ["argon2rs", "csv", "ring"]
# LDAP based authenticator
ldap_authenticator = ["ldap3", "strfmt"]

[dependencies]
biscuit = "0.0.6"
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.10"
log = "0.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "aa51fe0" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", rev = "aa51fe0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicase="1.4"
uuid = { version = "0.4", features = ["use_std", "serde"] }

# Optional dependencies that are activated by the various features
argon2rs = { version = "0.2.5", optional = true }
csv = { version = "0.15", optional = true }
ldap3 = { version = "0.4.0", optional = true }
ring = { version = "0.11", optional = true } # rust-jwt has this as its dependency
strfmt = { version = "0.1.5", optional = true }

[dev-dependencies]
serde_test = "1.0"

[build-dependencies]
ansi_term = "0.9"
version_check = "0.1"

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
