[package]
name = "rowdy-cli"
version = "0.0.8"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[[bin]]
name = "rowdy-cli"
path = "src/main.rs"
test = true
doc = false

[dependencies]
clap = "2.26.2"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rowdy = { path = "../", features = ["simple_authenticator", "ldap_authenticator"] }
rowdy-diesel = { path = "../diesel/", features = ["mysql", "sqlite", "postgres"] }
serde = "1.0"
serde_json = "1.0"
