[package]
name = "rowdy-diesel"
version = "0.0.7"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[lib]
name = "rowdy_diesel"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
diesel = { version = "0.16", features = ["mysql"] }
diesel_codegen = { version = "0.16", features = ["mysql"] }
log = "0.3"
ring = "0.11"
rocket = "0.3.2"
rowdy = { path = "../" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
