[package]
name = "rowdy-diesel"
version = "0.0.8"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[lib]
name = "rowdy_diesel"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = []

# Support MySQL
mysql = ["diesel/mysql", "diesel_codegen/mysql"]

# Support Sqlite
sqlite = ["diesel/sqlite", "diesel_codegen/sqlite"]

# Support Postgres
postgres = ["diesel/postgres", "diesel_codegen/postgres"]

[dependencies]
diesel = "0.16"
diesel_codegen = "0.16"
log = "0.3"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
ring = "0.11"
rocket = "0.3.2"
rowdy = { path = "../" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
