[package]
name = "rowdy-diesel"
version = "0.0.9"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[lib]
name = "rowdy_diesel"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = []

# Support MySQL
mysql = ["diesel/mysql"]

# Support Sqlite
sqlite = ["diesel/sqlite"]

# Support Postgres
postgres = ["diesel/postgres"]

[dependencies]
diesel = { version = "1.4.5", features = ["r2d2"] }
log = "0.4"
r2d2 = "0.8"
ring = "0.13.5"
rocket = "0.4.0"
rowdy = { path = "../" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
