[package]
name = "rowdy-lib"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[lib]
name = "rowdy"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
hyper = "0.10"
jwt = { git = "https://github.com/lawliet89/rust-jwt", rev = "2776297763332fbadda67e5e4f883518aaf0f4d7" }
log = "0.3"
rocket = "0.2.2"
rocket_codegen = "0.2.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
unicase="1.4"
uuid = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "uuid"]

[dev-dependencies]
rocket = { version = "*", features = ["testing"] }
